"driver create event" almost finish